<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment" >

    <ImageView
        android:id="@+id/logo_reg_view"
        android:layout_width="367dp"
        android:layout_height="94dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/login_reg_PT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/login_reg_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/login_TV_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pass_reg_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_TV_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/login_reg_TV"
        app:layout_constraintTop_toBottomOf="@+id/login_reg_PT" />

    <TextView
        android:id="@+id/pass_reg_rep_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_reg_rep_TV_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pass_reg_TV"
        app:layout_constraintTop_toBottomOf="@+id/password_reg_PT" />

    <Button
        android:id="@+id/reg_BTN"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:text="@string/create_account_BTN_text"
        app:layout_constraintEnd_toEndOf="@+id/password_repeat_reg_PT"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat_reg_PT" />

    <EditText
        android:id="@+id/login_reg_PT"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pass_reg_rep_TV"
        app:layout_constraintTop_toTopOf="@+id/login_reg_TV" />

    <EditText
        android:id="@+id/password_reg_PT"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_reg_PT"
        app:layout_constraintTop_toBottomOf="@+id/login_reg_PT" />

    <EditText
        android:id="@+id/password_repeat_reg_PT"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password_reg_PT"
        app:layout_constraintTop_toBottomOf="@+id/password_reg_PT" />

    <TextView
        android:id="@+id/info_reg_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/reg_BTN"
        app:layout_constraintEnd_toStartOf="@+id/reg_BTN"
        app:layout_constraintTop_toTopOf="@+id/reg_BTN" />

    <Button
        android:id="@+id/back_to_login_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login_BTN_text"
        app:layout_constraintStart_toStartOf="@+id/pass_reg_rep_TV"
        app:layout_constraintTop_toBottomOf="@+id/reg_BTN" />
</androidx.constraintlayout.widget.ConstraintLayout>